# captive-automate

./: README.md  pyproject.toml
captive-automate/: app.py  commons.py  login.py
