[tool.poetry]
name = "captive-automate"
version = "0.1.0"
description = "selenium script to automatically login to NIST wifi"
authors = ["ashkn <ash@ashkn.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.23.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
